--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ p {
     background-color:orange;
 }
 body {
-      background-image: url("http://wallpoper.com/images/00/28/43/78/cityscapes-seattle_00284378.jpg")
+      background-image: url("https://www.cosmeticsurgeryforyou.com/wp-content/uploads/2017/02/7314.jpg")
  }
 
 * {
